fix: scrollbars

--- a/src/scss/components/_prism-overrides.scss
+++ b/src/scss/components/_prism-overrides.scss
@@ -1,3 +1,17 @@
-/* pre[class^="language-"] {
-   grid-column: 2 / -2;
-} */
+pre[class^="language-"] {
+  border-radius: 1rem;
+
+
+  &::-webkit-scrollbar {
+    width: 0;
+  }
+  &::-webkit-scrollbar-track {
+    background: transparent;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background: #444;
+    border-radius: 8px;
+  }
+
+}
